2009-08-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_rdlock.S: Add CFI
	directives.
	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_wrlock.S: Likewise.

2009-08-10  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_signal.S
	(__pthread_cond_signal): Don't clobber register used for syscall
	number.

2009-08-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sem_timedwait.S (sem_timedwait):
	Optimize code path used when FUTEX_CLOCK_REALTIME is supported.

	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S
	(__pthread_cond_wait): Optimize by avoiding use of callee-safe
	register.

2009-08-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sem_wait.S: Little optimizations
	enabled by the special *_asynccancel functions.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Likewise.

	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: Include lowlevellock.h.

2009-08-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: New file.
	* sysdeps/unix/sysv/linux/x86_64/libc-cancellation.S: New file.
	* sysdeps/unix/sysv/linux/x86_64/librt-cancellation.S: New file.
	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h (PSEUDO): Optimize
	since we can assume the special __*_{en,dis}able_asynccancel
	functions.
	(PUSHARGS_*, POPARGS_*, SAVESTK_*, RESTSTK_*): Removed.
	* sysdeps/x86_64/tcb-offsets.sym: Add cancellation-related bits
	and PTHREAD_CANCELED.

2009-07-31  Ulrich Drepper  <drepper@redhat.com>

	* descr.h: Better definition of *_BITMASK macros for cancellation.

2009-07-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/tls.h (TLS_TCB_ALIGN): Define explicitly to 32.

	* sysdeps/x86_64/tls.h (tcbhead_t): Add room for SSE registers the
	dynamic linker might have to save.
	Define RTLD_CHECK_FOREIGN_CALL, RTLD_ENABLE_FOREIGN_CALL,